First test of close button on every tab
The closing icon will **only** be rendered on the active tab, but every
tab closes when you click in the corresponding area ( active tab will be
switched first, before the click event is processed)

--- a/open3mod/open3mod.csproj
+++ b/open3mod/open3mod.csproj
@@ -429,6 +429,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app_icon.ico" />
+    <EmbeddedResource Include="Images\close.png" />
     <EmbeddedResource Include="Images\TipOfTheDay\Tip5.png" />
     <EmbeddedResource Include="Images\TipOfTheDay\Tip3.png" />
     <EmbeddedResource Include="Images\TipOfTheDay\Tip4.png" />
