--- a/open3mod/open3mod.csproj
+++ b/open3mod/open3mod.csproj
@@ -107,6 +107,8 @@
     <Compile Include="FolderSetDisplay.Designer.cs">
       <DependentUpon>FolderSetDisplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="FpsLeapState.cs" />
+    <Compile Include="LeapState.cs" />
     <Compile Include="LeapListener.cs" />
     <Compile Include="LogPipe.cs" />
     <Compile Include="MaterialMapperClassicGl.cs" />
